# LevelZeroMetricSample

./: CMakeLists.txt  README.md
src/: CsvDumper.cpp  CsvDumper.h  NPUCollector.cpp  NPUCollector.h  NPUDevice.cpp  NPUDevice.h  NPUEngine.cpp  NPUEngine.h  NPUMetric.cpp  NPUMetric.h  NPUMetricGroup.cpp  NPUMetricGroup.h  NPUMetricStreamer.cpp  NPUMetricStreamer.h  argparser.h  common.h  main.cpp
